# Shipyard

./: .env.example  .gitignore  pyproject.toml  shipyard_cli.py
docs/: engineering-context.md
docs/superpowers/plans/: 2026-03-24-shipyard-implementation.md  2026-04-13-capella-export.md
docs/superpowers/specs/: 2026-03-24-shipyard-integration-design.md  2026-04-13-capella-export-design.md
src/: main.py
src/core/: __init__.py  capella_export.py  config.py  cost_tracker.py  exporter.py  llm_client.py  parser.py  project.py
src/core/models/: __init__.py  capella.py  core.py  decompose.py  rhapsody.py
src/core/templates/: .project  blank.aird
src/decompose/: __init__.py  decomposer.py  loader.py  prompts.py  refiner.py  validator.py  verifier.py
src/decompose/prompts/: decompose_level.txt  generate_vv.txt  levels_example.txt  refine_tree.txt  semantic_judge.txt
src/model/: pipeline.py
src/model/agent/: __init__.py  chat.py  tools.py
src/model/prompts/: agent_system.txt  analyze.txt  clarify.txt  generate_capella_epbs.txt  generate_capella_la.txt  generate_capella_oa.txt  generate_capella_pa.txt  generate_capella_sa.txt  generate_rhapsody_act.txt  generate_rhapsody_bdd.txt  generate_rhapsody_ibd.txt  generate_rhapsody_req.txt  link.txt  (+4 more)
src/web/: app.py
tests/: test_agent_chat.py  test_agent_tools.py  test_config.py  test_cost_tracker.py  test_data_flow.py  test_decompose.py  test_decompose_routes.py  test_e2e.py  test_edge_cases.py  test_llm_client.py  test_model_routes.py  test_models.py  test_parser.py  test_pipeline.py  test_project.py  test_web.py
(+11 files in other folders)
