[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shipyard"
version = "1.5.4"
description = "Unified shipbuilding requirements decomposition and MBSE modeling platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.5",
    "tqdm>=4.60.0",
    "capellambse>=0.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
shipyard = "shipyard_cli:main"

[tool.setuptools]
py-modules = ["shipyard_cli"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
